.provarCaches/00D5f000005vwGkEAI/objects/rstk__sortoper__c.object
<CustomObject>
    <description>sortoper__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Alternate External ID - This is a system generated value not shown on any user pages</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sortoper_soline__r.rstk__externalid__c &amp; &apos;_&apos; &amp; Text(rstk__sortoper_oper__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_allowaccind__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, a WO Receipt or WO Complete transaction may be done when this operation is reached.</inlineHelpText>
        <label>Allow Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_allowscrapind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, a WO Scrap transaction is allowed at this operation.</inlineHelpText>
        <label>Allow Scrap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altcode__c</fullName>
        <inlineHelpText>When a Work Order is created for this Configured Product, when the associated routing operations are extracted to the Work Order, operations will be included that carry this Alternate Routing code.</inlineHelpText>
        <label>Alternate Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altprice1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field is used in the setting of &quot;configurable&quot; labor operation Alternate Price 1 portion of the rollup price for the SO Line for a product configured using the model configurator.</inlineHelpText>
        <label>Alternate Price 1</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altprice1cc__c</fullName>
        <formula>IF(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,rstk__sortoper_altprice1__c,IF( ISNULL(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__sortoper_altprice1__c , rstk__sortoper_altprice1__c * rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altprice1hc__c</fullName>
        <formula>IF(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,IF( ISNULL(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__sortoper_altprice1__c, rstk__sortoper_altprice1__c / rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c),rstk__sortoper_altprice1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altprice2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field is used in the setting of &quot;configurable&quot; labor operation Alternate Price 2 portion of the rollup price for the SO Line for a product configured using the model configurator.</inlineHelpText>
        <label>Alternate Price 2</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altprice2cc__c</fullName>
        <formula>IF(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,rstk__sortoper_altprice2__c ,IF( ISNULL(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__sortoper_altprice2__c , rstk__sortoper_altprice2__c * rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_altprice2hc__c</fullName>
        <formula>IF(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,IF( ISNULL(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__sortoper_altprice2__c, rstk__sortoper_altprice2__c/ rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c),rstk__sortoper_altprice2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_assignedto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Mfg User to which this operation is assigned.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_attachsourceid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Attachment Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_concurseqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If this operation is a Concurrent Operation type, this is a value assigned to all associated concurrent operations.</inlineHelpText>
        <label>Concurrent Seq</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_costbasis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost Basis</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_descr__c</fullName>
        <inlineHelpText>The description of this operation.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_extaltprice1__c</fullName>
        <formula>(rstk__sortoper_altprice1__c * (rstk__sortoper_setuphr__c + rstk__sortoper_runhr__c)) + ( rstk__sortoper_machpricehr__c *  rstk__sortoper_machhr__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to set the &quot;configurable&quot; labor operation Alternate Price 1 portion of the rollup price for the SO Line for a product configured using the model configurator. Value = Alternate Price 1 times Qty Per.</inlineHelpText>
        <label>Extended Alt Price 1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_extaltprice2__c</fullName>
        <formula>(rstk__sortoper_altprice2__c * (rstk__sortoper_setuphr__c + rstk__sortoper_runhr__c)) + ( rstk__sortoper_machpricehr__c *  rstk__sortoper_machhr__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to set the &quot;configurable&quot; labor operation Alternate Price 2 portion of the rollup price for the SO Line for a product configured using the model configurator. Value = Alternate Price 2 times Qty Per.</inlineHelpText>
        <label>Extended Alt Price 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_extcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_extprice__c</fullName>
        <formula>(rstk__sortoper_price__c * ( rstk__sortoper_setuphr__c +  rstk__sortoper_runhr__c )) + ( rstk__sortoper_machpricehr__c *  rstk__sortoper_machhr__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_insptempl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inspection Order Template</label>
        <referenceTo>rstk__insptempl__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_isscomptocompl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Require Issue of Components to Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_labbackflush__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Backflush Labor at Qty Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_labbfclock__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Backflush Txn User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations (Labor Backflush Txn User)</relationshipLabel>
        <relationshipName>labbfclocksortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_labmachschtype_pl__c</fullName>
        <inlineHelpText>Indicates whether Labor or Machine time is used for scheduling.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Labor Only</fullName>
                </value>
                <value>
                    <fullName>Machine Only</fullName>
                </value>
                <value>
                    <fullName>Subcontract &amp; Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sortoper_labonlyind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this operation is for labor only.</inlineHelpText>
        <label>Labor Only Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_machhr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The standard hours required for this machine for this operation.</inlineHelpText>
        <label>Machine Hrs, Std</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_machno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Machine Number designated to be used at this operation.</inlineHelpText>
        <label>Machine Number</label>
        <referenceTo>rstk__rtmach__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_machpricehr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Machine Price per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_machtype_pl__c</fullName>
        <inlineHelpText>This designates the type of machine time used for this operation.  Options are &apos;Per Batch&apos; or &apos;Per Piece&apos;.</inlineHelpText>
        <label>Machine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per Batch</fullName>
                </value>
                <value>
                    <fullName>Per Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sortoper_markuppct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Markup Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_movcompind_pl__c</fullName>
        <inlineHelpText>Indicates whether Items are moved to the next operation or not when this operation is completed.</inlineHelpText>
        <label>Move / Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete (Concurrent Only)</fullName>
                </value>
                <value>
                    <fullName>Complete &amp; Move in 1-step</fullName>
                </value>
                <value>
                    <fullName>Complete &amp; Move Separately</fullName>
                </value>
                <value>
                    <fullName>Neither (Last Operation)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sortoper_movehr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard time to move from this operation to the next.</inlineHelpText>
        <label>Move Hours</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_multmachind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether of not multiple machines are associated with this operation. When checked, multiple machines are indicated.</inlineHelpText>
        <label>Multiple Machine Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_noprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Print on Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_notesourceid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Note Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_oper__c</fullName>
        <inlineHelpText>The user-defined operation number to be performed for this operation.  Where multiple records are created, the numbering sequence defines the order in which the operations are performed.</inlineHelpText>
        <label>Operation Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>When set, this is the price for labor used to calculate a SO Line price based on actual hours used.</inlineHelpText>
        <label>Sales Price Per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_pricecc__c</fullName>
        <formula>IF(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,rstk__sortoper_price__c ,  IF( ISNULL(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__sortoper_price__c , rstk__sortoper_price__c * rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_pricehc__c</fullName>
        <formula>IF(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,IF( ISNULL(rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 ,rstk__sortoper_price__c ,rstk__sortoper_price__c/ rstk__sortoper_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c),rstk__sortoper_price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_procno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Process Number representing the process associated with this operation.</inlineHelpText>
        <label>Process Number</label>
        <referenceTo>rstk__rtproc__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_rsnotes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Traveler Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_runhr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The standard run time hours required for this operation.</inlineHelpText>
        <label>Run Hours, Standard</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_runlabgrd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Labor Grade of the operator performing the run time required for this operation.</inlineHelpText>
        <label>Run Grade</label>
        <referenceTo>rstk__rtlabgrd__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_runtype_pl__c</fullName>
        <inlineHelpText>This designates the type of run time used for this operation.  Options are &apos;Per Batch&apos; or &apos;Per Piece&apos;.</inlineHelpText>
        <label>Run Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per Batch</fullName>
                </value>
                <value>
                    <fullName>Per Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sortoper_scrapfactor__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The scrap factor for this operation.</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_setuphr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The standard setup time hours required for this operation.</inlineHelpText>
        <label>Setup Hours, Standard</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_setuplabgrd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Labor Grade of the operator performing the setup time required for this operation.</inlineHelpText>
        <label>Setup Grade</label>
        <referenceTo>rstk__rtlabgrd__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations (Setup Grade)</relationshipLabel>
        <relationshipName>sortopers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_setuptype_pl__c</fullName>
        <inlineHelpText>This designates the type of setup time used for this operation.  Options are &apos;Per Batch&apos; or &apos;Per Piece&apos;.</inlineHelpText>
        <label>Setup Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per Batch</fullName>
                </value>
                <value>
                    <fullName>Per Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sortoper_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site associated with this operation</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_soline__c</fullName>
        <inlineHelpText>The Sales Order Line for the Configured Product for which the Sales Order Labor Operation record was created.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_stddivideby__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Default is 1. System will divide Run Hours by this number for costing and scheduling.</inlineHelpText>
        <label>Run Hours Divided By</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_subflag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this operation is a subcontracted (outsourced) operation.</inlineHelpText>
        <label>Outside Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_subltdays__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>When an operation is designated as &apos;Subcontract&apos;, this is the amount of time needed by the subcontractor to perform this operation.</inlineHelpText>
        <label>Subcontractor Lead Time</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_type_pl__c</fullName>
        <inlineHelpText>Defines the type of opertation.  Operation Type can be Standard, Concurrent, or Subcontract.</inlineHelpText>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concurrent Operation</fullName>
                </value>
                <value>
                    <fullName>Standard Operation</fullName>
                </value>
                <value>
                    <fullName>Subcontract Operation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sortoper_typecode__c</fullName>
        <inlineHelpText>Defines the type of opertation.  Operation Type can be Standard, Concurrent, or Subcontract.</inlineHelpText>
        <label>Operation Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_wbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Job Code (WBS Account) associated with this operation to which all charges will be applied.</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sortoper_wctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This defines the Work Center associated with this operation.</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Sales Order Labor Operations</relationshipLabel>
        <relationshipName>sortopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Labor Operation</label>
    <listViews>
        <fullName>rstk__RS_SO_Config_Labor2</fullName>
        <columns>NAME</columns>
        <columns>rstk__sortoper_soline__c</columns>
        <columns>rstk__sortoper_oper__c</columns>
        <columns>rstk__sortoper_descr__c</columns>
        <columns>rstk__sortoper_costbasis__c</columns>
        <columns>rstk__sortoper_markuppct__c</columns>
        <columns>rstk__sortoper_extcost__c</columns>
        <columns>rstk__sortoper_extprice__c</columns>
        <columns>rstk__sortoper_runlabgrd__c</columns>
        <columns>rstk__sortoper_runhr__c</columns>
        <columns>rstk__sortoper_pricecc__c</columns>
        <columns>rstk__sortoper_wctr__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>SO Config Labor</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SO_Labor_Operations</fullName>
        <columns>NAME</columns>
        <columns>rstk__sortoper_soline__c</columns>
        <columns>rstk__sortoper_type_pl__c</columns>
        <columns>rstk__sortoper_oper__c</columns>
        <columns>rstk__sortoper_descr__c</columns>
        <columns>rstk__sortoper_runhr__c</columns>
        <columns>rstk__sortoper_setuphr__c</columns>
        <columns>rstk__sortoper_costbasis__c</columns>
        <columns>rstk__sortoper_markuppct__c</columns>
        <columns>rstk__sortoper_procno__c</columns>
        <columns>rstk__sortoper_wctr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sortoper_labbackflush__c</columns>
        <columns>rstk__sortoper_labbfclock__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>SO Labor Operations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Labor Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Firmed_soline_cannot_be_specified</fullName>
        <active>false</active>
        <errorConditionFormula>null</errorConditionFormula>
        <errorMessage>A firmed soline cannot be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machine_Division</fullName>
        <active>true</active>
        <description>Machine Division</description>
        <errorConditionFormula>rstk__sortoper_machno__c != null &amp;&amp; rstk__sortoper_machno__r.rstk__rtmach_div__c !=  rstk__sortoper_soline__r.rstk__soline_shipdiv__c</errorConditionFormula>
        <errorMessage>Invalid Machine Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machine_WorkCenter</fullName>
        <active>true</active>
        <description>Machine must be in Work Center</description>
        <errorConditionFormula>rstk__sortoper_wctr__c != null &amp;&amp; rstk__sortoper_machno__c != null &amp;&amp;  rstk__sortoper_machno__r.rstk__rtmach_wctr__c != rstk__sortoper_wctr__c</errorConditionFormula>
        <errorMessage>Invalid Machine for Work Center</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Process_Division</fullName>
        <active>true</active>
        <description>Process Division</description>
        <errorConditionFormula>rstk__sortoper_procno__r.rstk__rtproc_div__c !=  rstk__sortoper_soline__r.rstk__soline_shipdiv__c</errorConditionFormula>
        <errorMessage>Invalid Process Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Run_Labor_Grade_Division</fullName>
        <active>true</active>
        <description>Run Labor Grade Division</description>
        <errorConditionFormula>rstk__sortoper_runlabgrd__c != null &amp;&amp;  rstk__sortoper_runlabgrd__r.rstk__rtlabgrd_div__c != rstk__sortoper_soline__r.rstk__soline_shipdiv__c</errorConditionFormula>
        <errorMessage>Invalid Run Labor Grade Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Price_Per_Hour_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(rstk__sortoper_price__c)) &amp;&amp; rstk__sortoper_price__c &lt; 0</errorConditionFormula>
        <errorMessage>Sales Price Per Hour cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Setup_Labor_Grade_Division</fullName>
        <active>true</active>
        <description>Setup Labor Grade Division</description>
        <errorConditionFormula>rstk__sortoper_setuplabgrd__c != null &amp;&amp;  rstk__sortoper_setuplabgrd__r.rstk__rtlabgrd_div__c !=  rstk__sortoper_soline__r.rstk__soline_shipdiv__c</errorConditionFormula>
        <errorMessage>Invalid Setup Grade Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Soline_Validation1</fullName>
        <active>true</active>
        <description>Soline Product Type must be &apos;Configured&apos; OR &apos;Configured This Time&apos; must be TRUE</description>
        <errorConditionFormula>NOT( ISPICKVAL( rstk__sortoper_soline__r.rstk__soline_prodtype__c , &apos;Configured&apos;) ||  rstk__sortoper_soline__r.rstk__soline_useconfig__c = TRUE)</errorConditionFormula>
        <errorMessage>Soline &apos;Product Type&apos; must be &apos;Configured&apos; OR &apos;Configured This Time&apos; must be TRUE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Work_Center_Division</fullName>
        <active>true</active>
        <description>Work Center Division</description>
        <errorConditionFormula>rstk__sortoper_wctr__r.rstk__rtwctr_div__c !=  rstk__sortoper_soline__r.rstk__soline_shipdiv__c</errorConditionFormula>
        <errorMessage>Invalid Work Center Division</errorMessage>
    </validationRules>
</CustomObject>